--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -21,7 +21,7 @@ services:
         - [setAuthKey, ["%auth_key%"]]
     app.form_login_authenticator:
         class: AppBundle\Security\FormLoginAuthenticator
-        arguments: ["@router", "@security.password_encoder"]
+        arguments: ["@router", "@security.password_encoder", "@session"]
     # default configuration for services in *this* file
     _defaults:
         # automatically injects dependencies in your services
